--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "essence",
+  "name": "essencevite",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,13 +11,15 @@
   },
   "dependencies": {
     "@tensorflow-models/posenet": "^2.2.2",
-    "@tensorflow/tfjs": "^4.5.0",
-    "moment": "^2.29.4",
+    "@tensorflow/tfjs": "^4.6.0",
+    "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.11.1",
-    "react-webcam": "^7.0.1"
+    "react-webcam": "^7.0.1",
+    "recharts": "^2.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
