--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@tensorflow-models/posenet": "^2.2.2",
     "@tensorflow/tfjs": "^4.6.0",
     "axios": "^1.4.0",
+    "boxicons": "^2.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.11.1",
     "react-webcam": "^7.0.1",
-    "recharts": "^2.8.0"
+    "recharts": "^2.8.0",
+    "sweetalert2": "^11.11.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
